--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext {
-        gradlePluginVersion = "3.5.0-rc02"
+        gradlePluginVersion = '4.1.3'
 
         minSdk = 21
         targetSdk = 29
