--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,8 @@ buildscript {
         constraintLayoutVersion = "1.1.2"
         circleImageViewVersion = "3.0.0"
         lifecycleVersion = "2.0.0"
-        retrofitVersion = "2.6.0"
+        retrofitVersion = "2.9.0"
+        okHttpVersion = "4.7.2"
         rxJavaVersion = "2.2.10"
         rxBindingVersion = "3.0.0"
         rxAndroidVersion = "2.1.1"
